# guesswho

./: Cargo.toml
.cargo/: config.toml
assets/data/: characters.json
src/: main.rs
src/implementation/: card.rs  common.rs  grid.rs  mod.rs
src/res/: card.rs  chars.rs  common.rs  grid.rs  mod.rs  ui.rs
