cargo-features = ["profile-rustflags"]

[package]
name = "guesswho"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking"] }
bevy_common_assets = {version = "0.15.0", features = ["json"]}
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
