cargo-features = ["profile-rustflags"]

[package]
name = "guesswho"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
  "dynamic_linking",
  "2d"
] }
bevy_common_assets = {version = "0.15.0", features = ["json"]}
rand_chacha = "0.3.1"
rand = "0.8.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
